--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=hBL5DxgNJZZBWnfoWkE6tOEn9ReLYaSD
+APP_KEY=z5WJ4l2tl5LkgzQBfKXDCJeWRmb05Szf
 APP_URL=http://localhost
 
 DB_HOST=127.0.0.1
-DB_DATABASE=ucenter
+DB_DATABASE=pms
 DB_USERNAME=root
 DB_PASSWORD=ucenter
 
@@ -17,11 +17,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.mxhichina.com 
+MAIL_PORT=25
+MAIL_USERNAME=info@anasit.com
+MAIL_PASSWORD=Anas77777
+MAIL_ENCRYPTION=
 
 API_STANDARDS_TREE=vnd
 API_PREFIX=api
